--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <nav class="navbar">
         <div class="navbar-container">
             <a href="#" class="logo">
@@ -25,5 +26,23 @@
             </div>
         </div>
     </nav>
+</header>
+
+
+    
+    <main class="main-section">
+        <div class="main-content">
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori nello stesso posto. Dropbox Business è un unico spazio di archiviazione sicuro con strumenti intelligenti e integrati per ottimizzare il flusso di lavoro esistente.</p>
+            <a href="#" class="start-button">Inizia la tua prova gratuita</a>
+            <p class="cancel-text">Annulla in qualsiasi momento</p>
+        </div>
+        <div class="main-image">
+            <img src="./img/jumbo.png" alt="Interfaccia Dropbox "> 
+        </div>
+    </main>
+
+
+
 </body>
 </html>
