--- a/index.html
+++ b/index.html
@@ -176,7 +176,72 @@
   </div>
 </section>
 
+<div class="section-wrapper">
+  <h2>Esegui più operazioni con Dropbox Business</h2>
 
+  <div class="img-divs">
+      <div class="items">
+          <img src="./img/business-feature-switching-tools.png" class="internal-image">
+          <h2>Passa di meno da uno strumento all'altro</h2>
+          <p>Porta a termine le attività quotidiane
+            con un solo strumento. Crea, modifica e
+            condividi contenuti cloud da
+            Documenti, Fogli e Presentazioni di
+            Google, file Microsoft Office e Dropbox
+            Paper direttamente da Dropbox.</p>
+      </div>
+      <div class="items">
+        <img src="./img/business-feature-send-files-it.png" class="internal-image">
+        <h2>Passa di meno da uno strumento all'altro</h2>
+        <p>Porta a termine le attività quotidiane
+          con un solo strumento. Crea, modifica e
+          condividi contenuti cloud da
+          Documenti, Fogli e Presentazioni di
+          Google, file Microsoft Office e Dropbox
+          Paper direttamente da Dropbox.</p>
+      </div>
+      <div class="items">
+        <img src="./img/business-feature-coordinate-it.png" class="internal-image">
+        <h2>Passa di meno da uno strumento all'altro</h2>
+        <p>Porta a termine le attività quotidiane
+          con un solo strumento. Crea, modifica e
+          condividi contenuti cloud da
+          Documenti, Fogli e Presentazioni di
+          Google, file Microsoft Office e Dropbox
+          Paper direttamente da Dropbox.</p>
+      </div>
+      <div class="items">
+        <img src="./img/business-feature-integrations-it.png" class="internal-image">
+        <h2>Passa di meno da uno strumento all'altro</h2>
+        <p>Porta a termine le attività quotidiane
+          con un solo strumento. Crea, modifica e
+          condividi contenuti cloud da
+          Documenti, Fogli e Presentazioni di
+          Google, file Microsoft Office e Dropbox
+          Paper direttamente da Dropbox.</p>
+      </div>
+      <div class="items">
+        <img src="./img/business-feature-multi-device.png" class="internal-image">
+        <h2>Passa di meno da uno strumento all'altro</h2>
+        <p>Porta a termine le attività quotidiane
+          con un solo strumento. Crea, modifica e
+          condividi contenuti cloud da
+          Documenti, Fogli e Presentazioni di
+          Google, file Microsoft Office e Dropbox
+          Paper direttamente da Dropbox.</p>
+      </div>
+      <div class="items">
+        <img src="./img/business-feature-security.png" class="internal-image">
+        <h2>Passa di meno da uno strumento all'altro</h2>
+        <p>Porta a termine le attività quotidiane
+          con un solo strumento. Crea, modifica e
+          condividi contenuti cloud da
+          Documenti, Fogli e Presentazioni di
+          Google, file Microsoft Office e Dropbox
+          Paper direttamente da Dropbox.</p>
+      </div>
+  </div>
+</div>
   
     </main>
 
